# blockcell

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  Cargo.toml  QUICKSTART.md  QUICKSTART.multi-agent.md  QUICKSTART.multi-agent.zh-CN.md  QUICKSTART.zh-CN.md  README.en.md  README.md  manifest.json
.github/workflows/: ci.yml
crates/agent/: .gitignore  Cargo.toml
crates/agent/.blockcell/tasks/: stage-test-1.json
crates/agent/src/: agent_loader.rs  capability_adapter.rs  checkpoint.rs  context.rs  dream_state.rs  fs_util.rs  ghost_background_review.rs  ghost_learning.rs  ghost_recall.rs  history_projector.rs  hooks.rs  intent.rs  learning_coordinator.rs  learning_dedup.rs  learning_throttle.rs  lib.rs  progress.rs  prompt_skill_executor.rs  response_cache.rs  runtime.rs  skill_file_store.rs  skill_index.rs  steering.rs  system_event_store.rs  task_manager.rs  token.rs  write_guard.rs
crates/agent/src/auto_memory/: cursor.rs  extractor.rs  injector.rs  memory_type.rs  mod.rs
crates/agent/src/compact/: file_tracker.rs  mod.rs  recovery.rs  (+2 more)
crates/agent/tests/: intent_mcp_validation.rs  memory_integration_test.rs
crates/channels/: Cargo.toml
crates/channels/src/: dingtalk.rs  discord.rs  feishu.rs  lark.rs  manager.rs  rate_limit.rs  slack.rs  telegram.rs  wecom.rs
crates/channels/src/napcat/websocket/: client.rs  server.rs
crates/channels/src/napcat/websocket/client/: api.rs
crates/channels/src/wecom/: dispatch.rs  longconn.rs  media.rs  polling.rs  send.rs  tests.rs  webhook.rs
crates/core/: Cargo.toml
crates/core/src/: budget.rs  config.rs  error.rs  lib.rs  logging.rs  mcp_config.rs  message.rs  path_policy.rs  paths.rs  session_key.rs  tool_policy.rs  types.rs
crates/core/tests/: budget.rs  standalone_mcp.rs  tool_policy.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  client.rs  embeddings.rs  factory.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  openai_responses.rs  pool.rs  prompt_utils.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: consolidator.rs  cron_service.rs  dream_service.rs  evolution_worker.rs  ghost.rs  lib.rs  skill_evolution_worker.rs
crates/scheduler/src/consolidator/: consolidate.rs  dream.rs  gather.rs  locking.rs  prune.rs  setup.rs  staging.rs  tests.rs
crates/skills/: Cargo.toml
crates/skills/src/: audit.rs  capability_versioning.rs  core_evolution.rs  engine.rs  evolution.rs  lib.rs  manager.rs  openclaw_parser.rs  service.rs  versioning.rs
crates/skills/src/core_evolution/: generation.rs
crates/skills/src/evolution/: audit.rs  compile.rs  compile_deploy.rs  context.rs  generate.rs  lifecycle.rs  prompts_audit.rs  prompts_gen.rs  tests.rs  versioning.rs
crates/skills/src/manager/: markdown.rs
crates/skills/src/service/: error_tracker.rs  layout.rs  observation.rs
crates/storage/: Cargo.toml
crates/storage/src/: audit.rs  contacts.rs  evolution_workflow.rs  ghost_ledger.rs  lib.rs  memory.rs  session.rs
crates/storage/src/memory/: brief.rs  crud.rs  import_migrate.rs  maintenance.rs  query.rs  schema.rs  tests.rs  vector_sync.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent.rs  agent_status.rs  alert_rule.rs  app_control.rs  audio_transcribe.rs  camera.rs  chart_generate.rs  community_hub.rs  cron.rs  data_process.rs  email.rs  encrypt.rs  evolution_workflow.rs  exec.rs  exec_local.rs  exec_skill_script.rs  file_ops.rs  fs.rs  http_request.rs  image_understand.rs  knowledge_graph.rs  lib.rs  memory.rs  memory_maintenance.rs  message.rs  network_monitor.rs  ocr.rs  office.rs  office_write.rs  registry.rs  registry_builder.rs  send_message.rs  session_recall.rs  session_search.rs  skill_manage.rs  skills.rs  spawn.rs  stream_subscribe.rs  system_info.rs  tasks.rs  (+5 more)
crates/tools/tests/: mcp_manager.rs
crates/updater/: Cargo.toml
crates/updater/src/: manager.rs
docs/: 00_index.md  02_quickstart.md  03_tools_system.md  04_skill_system.md  05_memory_system.md  08_gateway_mode.md  11_subagents.md  12_architecture.md  15_ghost_agent.md  17_cli_reference.md  18_proxy_and_provider_config.md  19_mcp_servers.md  20_provider_pool.md  21_intent_router_profiles.md  28_model_router.md  29_hook_system.md
docs/design/: blockcell-session-memory-system-design.md  memory-thresholds-configurable-design.md
docs/en/: 00_index.md  02_quickstart.md  03_tools_system.md  04_skill_system.md  05_memory_system.md  08_gateway_mode.md  11_subagents.md  12_architecture.md  15_ghost_agent.md  17_cli_reference.md  18_proxy_and_provider_config.md  20_provider_pool.md  21_intent_router_profiles.md
webui/: package.json
webui/.test-dist/: file-preview.test.js  store.test.js
webui/src/: App.tsx
webui/src/lib/: file-preview.test.ts  file-preview.ts  store.test.ts  store.ts  ws.ts
(+87 files in other folders)
