[package]
name = "blockcell-channels"
version = "0.1.7"
edition = "2021"

[dependencies]
blockcell-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dirs = { workspace = true }
prost = "0.13"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha2 = { workspace = true }
base64 = { workspace = true }
md5 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }

[features]
default = ["telegram", "whatsapp", "feishu", "slack", "discord", "dingtalk", "wecom", "lark", "weixin", "napcat"]
telegram = []
whatsapp = []
feishu = []
slack = []
discord = []
dingtalk = []
wecom = []
lark = []
qq = []
napcat = []
weixin = []
