[package]
name = "blockcell-scheduler"
version = "0.1.7"
edition = "2021"

[dependencies]
blockcell-core = { path = "../core" }
blockcell-agent = { path = "../agent" }
blockcell-tools = { path = "../tools" }
blockcell-providers = { path = "../providers" }
blockcell-skills = { path = "../skills" }
blockcell-storage = { path = "../storage" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }
