[package]
name = "blockcell-skills"
version = "0.1.6"
edition = "2021"

[dependencies]
blockcell-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
rhai = { workspace = true }
which = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
md5 = "0.7"
tar = "0.4"
flate2 = "1.0"
shellexpand = "3"
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi"] }
