[package]
name = "blockcell-storage"
version = "0.1.6"
edition = "2021"

[dependencies]
blockcell-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
rabitq_rs = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
